# the-simple-decompiler

./: CMakeLists.txt  LICENSE  README.md
src/: r2cgen.cpp  simple_decompiler.cpp
